tests/nested_type_member_name_conflict_bad.stderr
tests/nested_type_member_name_conflict_bad.sl:3:2: error: SL2001: duplicate symbol
