tests/nested_type_member_name_conflict_bad.sl
struct Thing {
	value i64
	struct value {
		x i64
	}
}
